--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Developer Bio</title>
+    <title>Interactive Developer </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'><path d='M9 0h6v4H9zm-3 6h12v4H6zm0 6h12v4H6zm0 6h12v4H6zm0 6h12v4H6zm-3-2h18v4H3zm0-6h18v4H3zm0-6h18v4H3z'/></svg>">
@@ -43,32 +43,35 @@
             margin-left: 270px;
             padding: 20px;
             margin-top: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
         }
 
         .image-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 20px;
+            margin-right: 20px;
         }
 
         .image-container img {
             max-width: 300px;
         }
 
+        .bio-text {
+            max-width: 500px;
+        }
+
         /* Quote Section */
         .quote-section {
-            position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 14px;
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            font-size: 12px;
             color: white;
-            text-align: center;
+            text-align: right;
             padding: 10px;
             background-color: rgba(0, 0, 0, 0.6);
             border-radius: 5px;
-            width: 90%;
+            width: 250px;
         }
 
         .quote-btn {
@@ -99,21 +102,26 @@
         .color-switches {
             position: fixed;
             right: 20px;
-            top: 50%;
-            transform: translateY(-50%);
+            bottom: 20px;
             background-color: black;
             padding: 10px;
             border-radius: 5px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            color: white;
         }
 
         .switch {
-            display: block;
             margin-bottom: 10px;
+            font-size: 10px;
         }
 
         .switch label {
+            margin-right: 10px;
+            font-size: 12px;
             color: white;
-            font-size: 14px;
         }
 
         /* Color Scheme Toggle */
@@ -188,32 +196,32 @@
         <span class="slider"></span>
     </div>
     <div class="switch">
-        <label>Hello Kitty</label>
+        <label>Kitty</label>
         <input type="checkbox" id="helloKitty">
         <span class="slider"></span>
     </div>
     <div class="switch">
-        <label>Minimal White</label>
+        <label>White</label>
         <input type="checkbox" id="minimalWhite">
         <span class="slider"></span>
     </div>
     <div class="switch">
-        <label>Black & Green Yellow</label>
+        <label>Green</label>
         <input type="checkbox" id="blackGreen">
         <span class="slider"></span>
     </div>
     <div class="switch">
-        <label>White & Fuchsia Red</label>
+        <label>Fuchsia</label>
         <input type="checkbox" id="whiteFuchsia">
         <span class="slider"></span>
     </div>
     <div class="switch">
-        <label>Black & Grey with Orange</label>
+        <label>Orange</label>
         <input type="checkbox" id="blackGreyOrange">
         <span class="slider"></span>
     </div>
     <div class="switch">
-        <label>Grayscale</label>
+        <label>Gray</label>
         <input type="checkbox" id="grayscale">
         <span class="slider"></span>
     </div>
@@ -229,6 +237,7 @@
 <button class="quote-btn" onclick="getNewQuote()">Get another quote</button>
 
 <script>
+
 const quotes = [
     { quote: "It is not our abilities that show what we truly are… it is our choices.", author: "J.K. Rowling, Harry Potter and the Chamber of Secrets" },
     { quote: "In three words I can sum up everything I've learned about life: it goes on.", author: "Robert Frost" },
@@ -299,6 +308,8 @@ const quotes = [
 ];
 
 
+
+
 // Display a random quote
 function getNewQuote() {
     const randomIndex = Math.floor(Math.random() * quotes.length);
@@ -314,29 +325,9 @@ const colorSchemes = {
     solarized: ['#002b36', '#fdf6e3'],
     helloKitty: ['#f8bbd0', '#ff69b4'],
     minimalWhite: ['#ffffff', '#f0f0f0'],
-    blackGreen: ['#000000', '#9e9e2a'],
-    whiteFuchsia: ['#ffffff', '#d500f9'],
-    blackGreyOrange: ['#000000', '#8e8e8e', '#ff7043'],
-    grayscale: ['#b0bec5', '#607d8b']
-};
+    blackGreen: ['
 
-function applyColorScheme() {
-    const scheme = Object.keys(colorSchemes).find(scheme => document.getElementById(scheme).checked);
-    if (scheme) {
-        const colors = colorSchemes[scheme];
-        document.body.style.backgroundColor = colors[0];
-        document.body.style.color = colors[1];
-    }
-}
 
-// Apply color scheme changes when toggles are changed
-document.querySelectorAll('.switch input').forEach(input => {
-    input.addEventListener('change', applyColorScheme);
-});
-</script>
-
-</body>
-</html>
 
 
 
