--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="bio-text">
         <h3>Interactive Developer Santiago</h3>
         <p>I am an interactive developer working on computer vision projects, with certifications in C++, Swift, and Objective-C.</p>
-        <p>Contact me for projects at <a href="mailto:sakayama234234@icloud.com">sakayama234234@icloud.com</a></p>
+        <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com">sakayama666@icloud.com</a></p>
     </div>
 </div>
 
@@ -309,7 +309,6 @@ const quotes = [
 
 
 
-
 // Display a random quote
 function getNewQuote() {
     const randomIndex = Math.floor(Math.random() * quotes.length);
@@ -325,9 +324,29 @@ const colorSchemes = {
     solarized: ['#002b36', '#fdf6e3'],
     helloKitty: ['#f8bbd0', '#ff69b4'],
     minimalWhite: ['#ffffff', '#f0f0f0'],
-    blackGreen: ['
+    blackGreen: ['#000000', '#4caf50'],
+    whiteFuchsia: ['#ffffff', '#d500f9'],
+    blackGreyOrange: ['#000000', '#9e9e9e'],
+    grayscale: ['#888888', '#f5f5f5']
+};
 
+function applyColorScheme() {
+    const currentScheme = Object.keys(colorSchemes).filter(scheme => document.getElementById(scheme).checked);
+    if (currentScheme.length > 0) {
+        document.body.style.backgroundColor = colorSchemes[currentScheme[0]][0];
+        document.body.style.color = colorSchemes[currentScheme[0]][1];
+    } else {
+        document.body.style.backgroundColor = '#f0f0f0';
+        document.body.style.color = '#000000';
+    }
+}
 
-
+// Apply color schemes based on toggle
+document.querySelectorAll('.switch input').forEach(input => {
+    input.addEventListener('change', applyColorScheme);
+});
+</script>
+</body>
+</html>
 
 
