--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -198,72 +199,11 @@
 <script>
 // Array of quotes (add more quotes as needed)
 const quotes = [
-    { quote: "It is not our abilities that show what we truly are… it is our choices.", author: "J.K. Rowling, Harry Potter and the Chamber of Secrets" },
-    { quote: "In three words I can sum up everything I've learned about life: it goes on.", author: "Robert Frost" },
-    { quote: "We are all fools in love.", author: "Jane Austen, Pride and Prejudice" },
-    { quote: "Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.", author: "Albert Einstein" },
-    { quote: "So many books, so little time.", author: "Frank Zappa" },
-    { quote: "A room without books is like a body without a soul.", author: "Marcus Tullius Cicero" },
-    { quote: "Good friends, good books, and a sleepy conscience: this is the ideal life.", author: "Mark Twain" },
-    { quote: "I have lived a thousand lives and I've loved a thousand loves. I've walked on distant worlds and seen the end of time. Because I read.", author: "George R.R. Martin" },
-    { quote: "The world was hers for the reading.", author: "Betty Smith, A Tree Grows in Brooklyn" },
-    { quote: "There is no friend as loyal as a book.", author: "Ernest Hemingway" },
-    { quote: "La vie est un défi, relève-le!", author: "Mère Teresa, La vie de Mère Teresa" },  // French
-    { quote: "Il cuore ha le sue ragioni che la ragione non conosce.", author: "Blaise Pascal, Pensieri" },  // Italian
-    { quote: "Solo con il cuore si può vedere bene; l’essenziale è invisibile agli occhi.", author: "Antoine de Saint-Exupéry, Il piccolo principe" },  // Italian
-    { quote: "La felicidad no es algo hecho. Viene de tus propias acciones.", author: "Dalai Lama" },  // Spanish
-    { quote: "En un lugar de la Mancha, de cuyo nombre no quiero acordarme...", author: "Miguel de Cervantes, Don Quijote de la Mancha" },  // Spanish
-    { quote: "Un libro è un giardino che puoi portare nella tua tasca.", author: "Proverbio arabo" },  // Italian
-    { quote: "Les mots sont, bien plus que les choses, les instruments de l’émotion humaine.", author: "Marcel Proust, À la recherche du temps perdu" },  // French
-    { quote: "Man ist nur dort wirklich frei, wo man sich selbst zu verwirklichen versteht.", author: "Johann Wolfgang von Goethe, Faust" },  // German
-    { quote: "Vivi come se dovessi morire domani. Impara come se dovessi vivere per sempre.", author: "Mahatma Gandhi" },  // Italian
-    { quote: "L’immensité de l’univers n’est rien comparée à l’immensité de l’âme humaine.", author: "Victor Hugo, Les Misérables" },  // French
-    { quote: "C’est en écrivant que l’on devient écrivain.", author: "Françoise Sagan, Bonjour tristesse" },  // French
-    { quote: "La realtà è ciò che accade quando non siamo distratti.", author: "Italo Calvino, Le città invisibili" },  // Italian
-    { quote: "Un libro è un sogno che tieni in mano.", author: "Neil Gaiman" },  // Italian
-    { quote: "No hay camino para la paz; la paz es el camino.", author: "Mahatma Gandhi" },  // Spanish
-    { quote: "Cada día nos ofrece una nueva oportunidad para comenzar de nuevo.", author: "Paulo Coelho, El Alquimista" },  // Spanish
-    { quote: "I can resist anything except temptation.", author: "Oscar Wilde, The Picture of Dorian Gray" },
-    { quote: "A person who won't read has no advantage over one who can't read.", author: "Mark Twain" },
-    { quote: "It is not what we have in life, but who we have in our life that matters.", author: "J.K. Rowling" },
-    { quote: "All that is gold does not glitter, not all those who wander are lost.", author: "J.R.R. Tolkien, The Fellowship of the Ring" },
-    { quote: "The only impossible journey is the one you never begin.", author: "Tony Robbins" },
-    { quote: "A reader lives a thousand lives before he dies. The man who never reads lives only one.", author: "George R.R. Martin" },
-    { quote: "Time is a great teacher, but unfortunately it kills all its pupils.", author: "Louis Hector Berlioz" },
-    { quote: "The most beautiful things in life are not seen, but felt with the heart.", author: "Helen Keller" },
-    { quote: "What is a friend? A single soul dwelling in two bodies.", author: "Aristotle" },
-    { quote: "There is no remedy for love but to love more.", author: "Henry David Thoreau" },
-    { quote: "Do not go where the path may lead, go instead where there is no path and leave a trail.", author: "Ralph Waldo Emerson" },
-    { quote: "Be yourself; everyone else is already taken.", author: "Oscar Wilde" },
-    { quote: "Books are a uniquely portable magic.", author: "Stephen King, On Writing" },
-    { quote: "The only thing you absolutely have to know is the location of the library.", author: "Albert Einstein" },
-    { quote: "So it goes.", author: "Kurt Vonnegut, Slaughterhouse-Five" },
-    { quote: "I am not afraid of storms, for I am learning how to sail my ship.", author: "Louisa May Alcott, Little Women" },
-    { quote: "The truth is rarely pure and never simple.", author: "Oscar Wilde, The Importance of Being Earnest" },
-    { quote: "Who controls the past controls the future. Who controls the present controls the past.", author: "George Orwell, 1984" },
-    { quote: "To be, or not to be, that is the question.", author: "William Shakespeare, Hamlet" },
-    { quote: "Life is what happens when you’re busy making other plans.", author: "John Lennon" },
-    { quote: "That which does not kill us makes us stronger.", author: "Friedrich Nietzsche" },
-    { quote: "You know that when I hate you, it is because I love you to a point of passion that unhinges my soul.", author: "Julie de Lespinasse, Letters to Count de Bussy" },
-    { quote: "The only way to deal with this life meaningfully is to find one's passion.", author: "Fyodor Dostoevsky" },
-    { quote: "We are always the same age inside.", author: "Gertrude Stein" },
-    { quote: "I could be bounded in a nutshell, and count myself a king of infinite space.", author: "William Shakespeare, Hamlet" },
-    { quote: "Do I dare disturb the universe?", author: "T.S. Eliot, The Love Song of J. Alfred Prufrock" },
-    { quote: "A friend to all is a friend to none.", author: "Aristotle" },
-    { quote: "I am not what happened to me, I am what I choose to become.", author: "Carl Jung" },
-    { quote: "The opposite of love is not hate, it’s indifference.", author: "Elie Wiesel" },
-    { quote: "To love oneself is the beginning of a lifelong romance.", author: "Oscar Wilde" },
-    { quote: "An eye for an eye only ends up making the whole world blind.", author: "Mahatma Gandhi" },
-    { quote: "L’amore è come il vento, non puoi vederlo ma puoi sentirlo.", author: "Nicholas Sparks, A Walk to Remember" },  // Italian
-    { quote: "Siamo tutti nella fogna, ma alcuni di noi guardano alle stelle.", author: "Oscar Wilde, The Happy Prince" },  // Italian
-    { quote: "La vita è bella nonostante le sue difficoltà.", author: "Luigi Pirandello" },  // Italian
-    { quote: "Vivere senza speranza è come vivere senza aria.", author: "Victor Hugo, Les Misérables" },  // French
-    { quote: "Il cielo sopra Berlino è grigio, ma i sogni sono colorati.", author: "Peter Handke" },  // Italian
-    { quote: "La dignità non consiste nel possedere onori, ma nel meritarli.", author: "Aristotele" },  // Italian
-    { quote: "Non si vede bene che col cuore. L’essenziale è invisibile agli occhi.", author: "Antoine de Saint-Exupéry, Il piccolo principe" },  // French
-    { quote: "Tutto ciò che è oro non luccica, non tutte le persone che vagano sono perdute.", author: "J.R.R. Tolkien" },  // Italian
-    { quote: "L'unico modo di fare un ottimo lavoro è amare quello che fai.", author: "Steve Jobs" },
-    // Add more quotes here up to 300...
+    "The only way to do great work is to love what you do. - Steve Jobs",
+    "It is not length of life, but depth of life. - Ralph Waldo Emerson",
+    "Life is what happens when you're busy making other plans. - John Lennon",
+    "Be yourself; everyone else is already taken. - Oscar Wilde",
+    "In three words I can sum up everything I've learned about life: it goes on. - Robert Frost"
 ];
 
 // Function to get a random quote
@@ -295,5 +235,4 @@ function changeColorMode() {
 
 </body>
 </html>
-
 
