--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Developer</title>
+    <title>Interactive Developer Bio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'><path d='M9 0h6v4H9zm-3 6h12v4H6zm0 6h12v4H6zm0 6h12v4H6zm0 6h12v4H6zm-3-2h18v4H3zm0-6h18v4H3zm0-6h18v4H3z'/></svg>">
@@ -123,8 +123,8 @@
         <img src="00000000000000.PNG" alt="Profile Image">
         <div class="bio-text">
             <h3>Interactive Developer Santiago</h3>
-            <p>I am an interactive developer working on computer vision projects, with certifications in Python, C++, Swift, and Objective-C.</p>
-            <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com">sakayama666@icloud.com</a></p>
+            <p>I am an interactive developer working on computer vision projects, with certifications in C++, Swift, Objective-C and Python.</p>
+            <p>Contact me for projects at <a href="mailto:sakayama666icloud.com">sakayama666@icloud.com</a></p>
         </div>
     </div>
 </div>
@@ -145,6 +145,35 @@
     </div>
     <div>
         <label>Green</label>
-        <input type="radio" name="colorMode" value="blackGreen" onclick="changeColorMode('blackGre
+        <input type="radio" name="colorMode" value="blackGreen" onclick="changeColorMode('blackGreen')">
+    </div>
+    <div>
+        <label>Fuchsia</label>
+        <input type="radio" name="colorMode" value="whiteFuchsia" onclick="changeColorMode('whiteFuchsia')">
+    </div>
+    <div>
+        <label>Orange</label>
+        <input type="radio" name="colorMode" value="blackGreyOrange" onclick="changeColorMode('blackGreyOrange')">
+    </div>
+    <div>
+        <label>Gray</label>
+        <input type="radio" name="colorMode" value="grayscale" onclick="changeColorMode('grayscale')">
+    </div>
+</div>
 
+<script>
+// Function to change the color mode
+function changeColorMode(mode) {
+    const modes = ["solarized", "kitty", "minimalWhite", "blackGreen", "whiteFuchsia", "blackGreyOrange", "grayscale"];
+    // Remove all color modes
+    modes.forEach((m) => {
+        document.body.classList.remove(m);
+    });
+    
+    // Add the selected color mode
+    document.body.classList.add(mode);
+}
+</script>
 
+</body>
+</html>
